# roastmaster.ai

./: .gitignore  design_guidelines.json  pyproject.toml  vercel.json
backend/: migrate_v2.py  migrate_v3.py  requirements.txt  server.py
emergentintegrations/: __init__.py
emergentintegrations/llm/: __init__.py  chat.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json  robots.txt  sitemap.xml
frontend/src/: App.js  index.css
frontend/src/components/: Footer.jsx  LegalPage.jsx  PaywallModal.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Auth.jsx  Contact.jsx  Dashboard.jsx  ForgotPassword.jsx  Landing.jsx  Leaderboard.jsx  Privacy.jsx  Refund.jsx  Roast.jsx  Terms.jsx
output/playwright/: qa-focus.json  qa-results.json
