[project]
name = "roastmaster-ai"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bcrypt==4.1.3",
    "beautifulsoup4==4.14.3",
    "certifi==2026.2.25",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "pg8000==1.31.2",
    "PyJWT==2.12.1",
    "pypdf==6.10.2",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.24",
    "python-pptx==1.0.2",
    "razorpay==2.0.1",
    "requests==2.33.1",
    "uvicorn==0.25.0",
]
